<resources>
    <string name="app_name">CarOnline</string>
    <string name="price_116_400">Price:$116,400</string>
    <string name="car_information">Car Information</string>
    <string name="color_green">Color: Green</string>
    <string name="modem_2023_sport_car_860">Modem 2023 Sport Car 860</string>
    <string name="price_200_400">Price:$200,400</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="bmw">BMW</string>
    <string name="modem_2023_bmw_760">Modem 2023 BMW 760</string>
    <string name="sport_car">Sport Car</string>
    <string name="color_white">Color: White</string>
    <string name="rolly_roce">Rolly Roce</string>
    <string name="modem_2023_rolly_roce">Modem 2023 Rolly Roce</string>
    <string name="price_500_000">Price:$500,000</string>
    <string name="todos">TODO</string>
    <string name="color_dark_blue">Color: Dark Blue</string>
    <string name="todoz">TODO</string>
    <string name="today" />
    <string name="rolly_roce_king">Rolly Roce King</string>
    <string name="modem_2020">Modem 2020</string>
    <string name="color_red">Color: Red</string>
    <string name="order_now">Order Now</string>
    <string name="wise">TODO</string>
    <string name="price_800_000">Price:$800,000</string>
    <string name="car_rental">CAR RENTAL</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_in_our_services">WELCOME IN OUR SERVICES</string>
    <string name="bmww">BMW</string>
    <string name="make_order">Make order</string>
    <string name="car_available">Car Available</string>
    <string name="color_dark_blues">Color: Dark Blue</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">REGISTRATION</string>
    <string name="FullName" />
    <string name="fullname">FullName</string>
    <string name="emails">Email</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="log_in">LOG IN</string>
    <string name="passwordy">Password</string>
    <string name="submit2">Submit</string>
    <string name="payment_form">Payment Form</string>
    <string name="date">Date</string>
    <string name="customer_name">Customer name</string>
    <string name="email_address">Email Address</string>
    <string name="city">City</string>
    <string name="address1">Address</string>
    <string name="email2">Email</string>
    <string name="amount_paid">Amount paid</string>
</resources>