<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/car_information"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/b"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmw"
                    android:textColor="#FF5722"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modem_2023_bmw_760"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_116_400"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_green"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>

        <!--        content 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/c"
                android:contentDescription="@string/wise" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_car"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modem_2023_sport_car_860"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_200_400"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_white"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


        </LinearLayout>

        <!--        content 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/r"
                android:contentDescription="@string/todos">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rolly_roce"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modem_2023_rolly_roce"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_500_000"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_dark_blue"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <!--        content 4-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/rl2"
                android:contentDescription="@string/today">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rolly_roce_king"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modem_2020"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_800_000"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_red"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_bg"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="50dp"
            android:paddingBottom="10dp"
            android:text="@string/order_now"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>